# backtesting-rust

./: .gitignore  Cargo.toml
config/: debug_log4rs.yaml  log4rs.yaml
examples/: gpu_testing.rs  shader.wgsl
examples/cpu_csv_test/: date_time.rs  main.rs
examples/gpu_csv_test/: main.rs  model.rs  shader.wgsl
src/: analysis.rs  events.rs  lib.rs  main.rs  strategy.rs  test.rs  utils.rs  vector_utils.rs
