[package]
name = "backtesting"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
serde_derive = "1.0.136"
chrono = "0.4.19"
log = "0.4.16"
rustc-hash = "1.1.0"
rayon = "1.5.2"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]