[package]
name = "backtesting"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
serde_derive = "1.0.136"
chrono = "0.4.19"
bdays = "0.1.3"
log = "0.4.16"
log4rs = "1.1.0"
rustc-hash = "1.1.0"
itertools = "0.10.3"
simple-error = "0.2.3"
wgpu = "0.12.0"
wgpu-core = "0.12.2"
wgpu-hal = "0.12.5"
pollster = "0.2.5"
wgpu-types = "0.12.0"
bytemuck = "1.9.1"
rand = "0.8.5"